--- a/src/common/sidemenu/drawer1.css
+++ b/src/common/sidemenu/drawer1.css
@@ -15,10 +15,11 @@
 .icon {
     display: flex;
     direction: row;
-    justify-items: self-end;
-    justify-content: space-around;
+    justify-items: center;
+    justify-content: center;
     align-items: center;
     color: rgb(116, 116, 116);
+    padding-top: 5px;
 
 }
 
@@ -70,9 +71,9 @@ a:hover {
 }
 
 .ant-drawer-body {
-    /* width: 380px; */
+    width: 365px;
     /* margin-top: 36px; */
-    height:95%;
+    height:100%;
     padding: 0px !important;
     overflow-y: hidden;
 }
@@ -120,8 +121,8 @@ transform: translateX(0px) !important;
     overflow-y: auto;
     margin-top: 50px;
     margin-bottom: 0px;
-    position: fixed;
-
+    /* position: absolute; */
+    transform : translateX(0);
 
 }
 
@@ -131,8 +132,11 @@ transform: translateX(0px) !important;
     background-color: rgb(255, 255, 255);
     position: absolute;
     top: 0;
+   
     transform: translateX(100%);
-    transition: transform 3s ease-in-out;
+    transition: transform 0.8s ease-in-out;
     padding-left: 50px;
-    overflow-y: auto;
+    margin-top: 30px;
+    overflow-y: hidden;
+    
 }
