--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -51,8 +51,10 @@
 
 
 .container {
-  height: 500vh;
+  max-width: 100%;
+ height:100vh;
   background-color: #dddddd;
+  z-index: -1;
 }
 
 .link {
@@ -66,11 +68,7 @@
 }
 
 
-.carousel {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
+
 
 .carousel-img {
   min-width: 100vw;
@@ -100,9 +98,7 @@
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
-  position: absolute;
-  left: 0;
-  top: 450px;
+  margin-top: -350px;
   padding-left: 35px;
   padding-right: 20px;
   width: 98vw;
