--- a/src/common/sidemenu/drawer1.css
+++ b/src/common/sidemenu/drawer1.css
@@ -8,9 +8,7 @@
     display: flex;
     direction: row;
     justify-content: stretch;
-   
 }
-
 
 .icon {
     display: flex;
@@ -20,13 +18,12 @@
     align-items: center;
     color: rgb(116, 116, 116);
     padding-top: 5px;
-
+    width: 20px;
 }
 
-a .icon::after {
-    color: black;
+.icon:hover {
+    color: black !important;
 }
-
 
 .items a {
     text-decoration: none;
@@ -41,11 +38,12 @@ a:hover {
     color: #000 !important;
 }
 
-.borderBtm {
-    border-bottom: #ddd;
-    gap: 10px;
-    
-    
+.dropdown {
+    color: black;
+}
+
+.dropdown:hover {
+    color: #000 !important;
 }
 
 .btn {
@@ -72,20 +70,23 @@ a:hover {
 
 .ant-drawer-body {
     width: 365px;
-    /* margin-top: 36px; */
-    height:100%;
+    height: 100% !important;
     padding: 0px !important;
     overflow-y: hidden;
 }
-/* .ant-drawer-header {
-    height: 95% !;
-} */
 
 .ant-drawer-content-wrapper {
     width: 365px !important;
-    height:95%;
+    height: 95%;
 }
+/* .ant-drawer-wrapper-body{ */
+    /* height: 120%; */
+/* } */
 
+.ant-drawer-content {
+    min-width: 50%;
+    height: 153% !important ;
+}
 
 .ant-menu-sub.ant-menu-inline {
     background: white !important;
@@ -100,11 +101,14 @@ a:hover {
     border-right: none !important;
     color: #000 !important;
 }
-.ant-scrolling-effect{
-   right:0;
+
+.ant-scrolling-effect {
+    right: 0;
+    /* left: auto; */
 }
-.ant-drawer-open{
-transform: translateX(0px) !important;
+
+.ant-drawer-open {
+    transform: translateX(0px) !important;
 }
 
 * {
@@ -121,22 +125,5 @@ transform: translateX(0px) !important;
     overflow-y: auto;
     margin-top: 50px;
     margin-bottom: 0px;
-    /* position: absolute; */
-    transform : translateX(0);
-
-}
-
-.subsidemenu {
-    width: 365px;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-    top: 0;
-   
-    transform: translateX(100%);
-    transition: transform 0.8s ease-in-out;
-    padding-left: 50px;
-    margin-top: 30px;
-    overflow-y: hidden;
-    
+    transform: translateX(0);
 }
